@startuml

title __ADAPTADOR's Class Diagram__\n

  namespace com.example.realbreadbeta {
    namespace adaptador {
      class com.example.realbreadbeta.adaptador.CategoriasAdaptador {
          ~ context : Context
          ~ listaCategorias : List<Categorias>
          + CategoriasAdaptador()
          + getItemCount()
          + onBindViewHolder()
          + onCreateViewHolder()
      }
    }
  }
  

  namespace com.example.realbreadbeta {
    namespace adaptador {
      class com.example.realbreadbeta.adaptador.CategoriasAdaptador.CategoriasViewHolder {
          ~ imagen : ImageView
          ~ nombre : TextView
          + CategoriasViewHolder()
      }
    }
  }
  

  namespace com.example.realbreadbeta {
    namespace adaptador {
      class com.example.realbreadbeta.adaptador.OfertasAdaptador {
          ~ context : Context
          ~ listaOfertas : List<Ofertas>
          + OfertasAdaptador()
          + getItemCount()
          + onBindViewHolder()
          + onCreateViewHolder()
      }
    }
  }
  

  namespace com.example.realbreadbeta {
    namespace adaptador {
      class com.example.realbreadbeta.adaptador.OfertasAdaptador.OfertasViewHolder {
          ~ imagen : ImageView
          + OfertasViewHolder()
      }
    }
  }
  

  namespace com.example.realbreadbeta {
    namespace adaptador {
      class com.example.realbreadbeta.adaptador.ProductosDestacadosAdaptador {
          ~ context : Context
          ~ listaProductos : List<Productos>
          + ProductosDestacadosAdaptador()
          + getItemCount()
          + onBindViewHolder()
          + onCreateViewHolder()
      }
    }
  }
  

  namespace com.example.realbreadbeta {
    namespace adaptador {
      class com.example.realbreadbeta.adaptador.ProductosDestacadosAdaptador.ProductosDestacadosViewHolder {
          ~ descripcion : TextView
          ~ imagen : ImageView
          ~ nombre : TextView
          ~ precio : TextView
          + ProductosDestacadosViewHolder()
      }
    }
  }
  

  com.example.realbreadbeta.adaptador.CategoriasAdaptador -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.example.realbreadbeta.adaptador.CategoriasAdaptador +-down- com.example.realbreadbeta.adaptador.CategoriasAdaptador.CategoriasViewHolder
  com.example.realbreadbeta.adaptador.CategoriasAdaptador.CategoriasViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  com.example.realbreadbeta.adaptador.OfertasAdaptador -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.example.realbreadbeta.adaptador.OfertasAdaptador +-down- com.example.realbreadbeta.adaptador.OfertasAdaptador.OfertasViewHolder
  com.example.realbreadbeta.adaptador.OfertasAdaptador.OfertasViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  com.example.realbreadbeta.adaptador.ProductosDestacadosAdaptador -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.example.realbreadbeta.adaptador.ProductosDestacadosAdaptador +-down- com.example.realbreadbeta.adaptador.ProductosDestacadosAdaptador.ProductosDestacadosViewHolder
  com.example.realbreadbeta.adaptador.ProductosDestacadosAdaptador.ProductosDestacadosViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
